--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,15 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
 *, *:before, *:after{
     box-sizing: inherit;
+}
+/*Scroll Snap*/
+.servicio, .navegacionPrincipal, .formulario, .footer{
+    scroll-snap-align: center;
+    /* scroll-snap-stop: always; */
 }
 body{
     font-size: 16px; /* 1rem=10px*/
@@ -43,13 +49,41 @@ body{
     text-transform: uppercase;
     font-weight: bold;
     border-radius: .5rem;
-    width: 80%;
+    width: 90%;
     text-align: center;
+    border: none;
 }
+
 @media (min-width: 480px ){
     .boton{
         width: auto;
+        margin-top: 3rem;
     }   
+}
+.boton:hover{
+    cursor: pointer;
+}
+
+.boton:active{
+    transform: scale(95%);
+}
+
+/* Utilidades**/
+.w-sm-100{
+    width: 100%;
+}
+
+@media (min-width: 768px ){
+    .w-sm-100{
+        width: auto;
+    }        
+}
+.flex{
+    display: flex;
+
+}
+.alinear-derecha{
+    justify-content: flex-end;
 }
 
 /* tipografia*/
@@ -143,6 +177,7 @@ h1,h2,h3{
     align-items: flex-end;
 }
 
+
 /* Servicios*/
 @media (min-width: 768px ){
     
@@ -197,11 +232,45 @@ h1,h2,h3{
     margin-bottom: 2rem;
     color: var(--primario);
 }
+@media (min-width: 768px ){
+    
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4){
 
-.contenedor-campos{
+        grid-column: 1/3;
+
+    }
+
+}
+    
+.campo{
+    margin-bottom: 1rem;
 
 }
 
-.campo{
-    margin-bottom: 1rem;
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+.campo textarea{
+    height: 20rem;
+}
+/* footer*/
+.footer{
+    text-align: center;
 }
